# RatataR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RatataR.cpp  hook.cpp  taR.cpp
app/: CMakeLists.txt
app/resources/: RatataR.rc
app/src/: RatataR.cpp
hook/: CMakeLists.txt
hook/include/: DynArray_Z.h  Types_Z.h  config_handler.h
hook/include/rpc-client/: discord_manager.h
hook/src/: config_handler.cpp  hook.cpp
hook/src/rpc-client/: discord_manager.cpp
include/: config_handler.h
rich-presence/: levels.h  rpc.h
rich-presence/include/rpc-client/: discord_manager.cpp  discord_manager.h
rich-presence/rpc-client/include/: levels.h  rpc.h
rich-presence/rpc-client/src/: levels.cpp  rpc.cpp
src/: RatataR.cpp  config_handler.cpp  hook.cpp
